--------------------------------------------
+: added code
-: removed code
*: fixed code
#: changed (to better) code
!: note
--------------------------------------------

Version : beta 1
//11/2/2006
*minnor fixes on read/write register functions
+added basic handling for : cpg
+added basic handling for : dmac
+added basic handling for : bsc
+added basic handling for : ubc
+added basic handling for : rtc
+added basic handling for : scif
+added basic handling for : sci

//4-7/2/2006
//drkIIRaziel
+*Varius fixes all around
+Basic internal registers handling
+Basic handling of area0 
+Basic structure for gdrom plugin

//2/2/2006
//drkIIRaziel
+*Added plugins\plugin_types.cpp/h , splited plugins\plugin_manager.cpp/h code needed to move around
#plugins\plugin_types.h now contains headers for classes , plugins\plugin_types.cpp the implementations
+plugins\plugin_types.cpp/h  -> moved types needed by plugins and emu  , added a few operators for VersionNumber struct
+Created nullPvr project as a sample plugin , added it onto the solution file
+Extended pvr interface (well more like added the most basic neded functions to it :P)
#*Massive fixes/changed/rewrites of pvr_if, pvr plugin code and register interface .. after all this time
		it is finaly up.Let's hope we'l get some action soon :)
+Moved pvr_mmr* code to plugin
+Updated pvr plugin spec to build 2(added vram and regs params)

//1/2/2006
//drkIIRaziel
+Added plugins\plugin_manager.cpp/h
+Added base class for plugin loading (nullDC_plugin) and
	created start code for PowerVR plguins.Also created all needed types on plugins\plugin_manager.h
+Added plugin enumeration function
+Created new project ..\Plugins\pvrIcZeZuGL\* , this will keep a port of ZeZu's old OpenGL plugin
#Played a bit mroe w/ pvr interface ideas , still no clear idea on what to do w/ it

//31/1/2006
//drkIIRaziel
-Removed  -bench parameter to benchmark thread performance
*Varius bugfixed on stdclass.c