@@ -27,8 +27,8 @@ Global
 		{47CE9BF1-542B-4C45-A22A-353A9FC97322}.Debug-Trace|Win32.Build.0 = Debug|Win32
 		{47CE9BF1-542B-4C45-A22A-353A9FC97322}.Release-NoTrace|Win32.ActiveCfg = Release-NoTrace|Win32
 		{47CE9BF1-542B-4C45-A22A-353A9FC97322}.Release-NoTrace|Win32.Build.0 = Release-NoTrace|Win32
-		{47CE9BF1-542B-4C45-A22A-353A9FC97322}.Release-Trace|Win32.ActiveCfg = Release|Win32
-		{47CE9BF1-542B-4C45-A22A-353A9FC97322}.Release-Trace|Win32.Build.0 = Release|Win32
+		{47CE9BF1-542B-4C45-A22A-353A9FC97322}.Release-Trace|Win32.ActiveCfg = Release-NoTrace|Win32
+		{47CE9BF1-542B-4C45-A22A-353A9FC97322}.Release-Trace|Win32.Build.0 = Release-NoTrace|Win32
 		{F8155C2C-5B79-410B-8DFF-60D8D51555E4}.Debug-NoTrace|Win32.ActiveCfg = Debug|Win32
 		{F8155C2C-5B79-410B-8DFF-60D8D51555E4}.Debug-NoTrace|Win32.Build.0 = Debug|Win32
 		{F8155C2C-5B79-410B-8DFF-60D8D51555E4}.Debug-Trace|Win32.ActiveCfg = Debug|Win32
@@ -41,10 +41,10 @@ Global
 		{2415C385-C878-4D66-A097-FF25BCCDC1EB}.Debug-NoTrace|Win32.Build.0 = Debug|Win32
 		{2415C385-C878-4D66-A097-FF25BCCDC1EB}.Debug-Trace|Win32.ActiveCfg = Debug|Win32
 		{2415C385-C878-4D66-A097-FF25BCCDC1EB}.Debug-Trace|Win32.Build.0 = Debug|Win32
-		{2415C385-C878-4D66-A097-FF25BCCDC1EB}.Release-NoTrace|Win32.ActiveCfg = Release|Win32
-		{2415C385-C878-4D66-A097-FF25BCCDC1EB}.Release-NoTrace|Win32.Build.0 = Release|Win32
-		{2415C385-C878-4D66-A097-FF25BCCDC1EB}.Release-Trace|Win32.ActiveCfg = Release|Win32
-		{2415C385-C878-4D66-A097-FF25BCCDC1EB}.Release-Trace|Win32.Build.0 = Release|Win32
+		{2415C385-C878-4D66-A097-FF25BCCDC1EB}.Release-NoTrace|Win32.ActiveCfg = Debug|Win32
+		{2415C385-C878-4D66-A097-FF25BCCDC1EB}.Release-NoTrace|Win32.Build.0 = Debug|Win32
+		{2415C385-C878-4D66-A097-FF25BCCDC1EB}.Release-Trace|Win32.ActiveCfg = Debug|Win32
+		{2415C385-C878-4D66-A097-FF25BCCDC1EB}.Release-Trace|Win32.Build.0 = Debug|Win32
 		{0520BA33-1A98-4DDE-8B36-99F25EDC5BD6}.Debug-NoTrace|Win32.ActiveCfg = Debug|Win32
 		{0520BA33-1A98-4DDE-8B36-99F25EDC5BD6}.Debug-NoTrace|Win32.Build.0 = Debug|Win32
 		{0520BA33-1A98-4DDE-8B36-99F25EDC5BD6}.Debug-Trace|Win32.ActiveCfg = Debug|Win32
