@@ -1,5 +1,7 @@
 //new implementation of GD rom
+
 #pragma once
+#ifdef OLD_GDROM
 #include "types.h"
 #include "plugins/plugin_types.h"
 
@@ -286,3 +288,4 @@ extern u16 g_aValues0x71_b[];
 extern u16 g_aValues0x71[];
 extern char szExDT[8][32];
 
+#endif
